typescript/checker/tests/conformance/es6/Symbols/symbolType7.ts.stderr
error: TS2362 {
    span: Span {
        lo: BytePos(
            46,
        ),
        hi: BytePos(
            47,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/es6/Symbols/symbolType7.ts:3:1
  |
3 | s << s;
  | ^

error: TS2363 {
    span: Span {
        lo: BytePos(
            51,
        ),
        hi: BytePos(
            52,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/es6/Symbols/symbolType7.ts:3:6
  |
3 | s << s;
  |      ^

error: TS2362 {
    span: Span {
        lo: BytePos(
            55,
        ),
        hi: BytePos(
            56,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/es6/Symbols/symbolType7.ts:4:1
  |
4 | s << 0;
  | ^

error: TS2362 {
    span: Span {
        lo: BytePos(
            64,
        ),
        hi: BytePos(
            65,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/es6/Symbols/symbolType7.ts:5:1
  |
5 | s >> s;
  | ^

error: TS2363 {
    span: Span {
        lo: BytePos(
            69,
        ),
        hi: BytePos(
            70,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/es6/Symbols/symbolType7.ts:5:6
  |
5 | s >> s;
  |      ^

error: TS2362 {
    span: Span {
        lo: BytePos(
            73,
        ),
        hi: BytePos(
            74,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/es6/Symbols/symbolType7.ts:6:1
  |
6 | s >> 0;
  | ^

error: TS2362 {
    span: Span {
        lo: BytePos(
            82,
        ),
        hi: BytePos(
            83,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/es6/Symbols/symbolType7.ts:7:1
  |
7 | s >>> s;
  | ^

error: TS2363 {
    span: Span {
        lo: BytePos(
            88,
        ),
        hi: BytePos(
            89,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/es6/Symbols/symbolType7.ts:7:7
  |
7 | s >>> s;
  |       ^

error: TS2362 {
    span: Span {
        lo: BytePos(
            92,
        ),
        hi: BytePos(
            93,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/es6/Symbols/symbolType7.ts:8:1
  |
8 | s >>> 0;
  | ^

